chore: add build scripts and dependencies
Add Gulp and Webpack build scripts and package.json
dependencies for the build and source file linting.

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,9 @@
   <meta name="google" content="nositelinkssearchbox">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <title>SME DFW Chapter | Homepage</title>
-  <link href="styles.css" rel="stylesheet">
+  <% for (var chunk in htmlWebpackPlugin.files.chunks) { %>
+    <script src="<%= htmlWebpackPlugin.files.chunks[chunk].entry %>"></script>
+  <% } %>
 </head>
 <body>
 <!-- TODO: Add content here. -->
