chore: add first site assets and markup
Add complete index.html, all site images and
styles, removed CSS Gridish in favor of Bootstrap.

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="theme-color" content="#0c3352">
   <meta name="description" content="Official homepage for the SME Dallas-Fort Worth (DFW) Chapter.">
+  <meta name="keywords" content="engineering, manufacturing, sme, education">
   <meta name="robots" content="index,follow">
   <meta name="googlebot" content="index,follow">
   <meta name="google" content="nositelinkssearchbox">
@@ -15,6 +16,110 @@
   <% } %>
 </head>
 <body>
-<!-- TODO: Add content here. -->
+  <div class="container">
+
+    <section class="jumbotron p-3 p-md-5 text-white dfw-jumbotron-image">
+      <img src="/smedfw_logo.svg" class="mb-4">
+      <div class="col-md-6 px-0">
+        <h1 class="display-4">Welcome</h1>
+        <p class="lead my-3">SME DFW Chapter works to engage, educate and provide collaborative opportunities for manufacturing students and professionals in the Dallas-Fort Worth area.</p>
+      </div>
+    </section>
+
+    <div class="row mb-2">
+      <div class="col-md-6">
+        <div class="card flex-md-row mb-4 shadow-sm h-md-300 h-lg-250">
+          <article class="card-body d-flex flex-column align-items-start">
+            <h3 class="mb-0 text-dark">
+              What is SME?
+            </h3>
+            <p class="mb-auto py-2">SME (formerly known as the Society of Manufacturing Engineers) is a non-profit, professional association for educating and advancing the manufacturing industry.</p>
+            <a class="btn btn-outline-primary" href="http://www.sme.org/">More information</a>
+          </article>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="card flex-md-row mb-4 shadow-sm h-md-300 h-lg-250">
+          <article class="card-body d-flex flex-column align-items-start">
+            <h3 class="mb-0 text-dark">
+              Start here. Visit our Meetup.
+            </h3>
+            <p class="mb-auto py-2">Our Meetup group is your source for upcoming chapter events and announcements. You can also start discussions with fellow professionals and provide feedback.</p>
+            <a class="btn btn-outline-primary" href="https://www.meetup.com/smedfw/">Join us now</a>
+          </article>
+        </div>
+      </div>
+    </div>
+
+    <div class="row mb-2">
+      <div class="col dfw-social-link">
+        <a href="https://www.meetup.com/smedfw/" target="_blank" class="text-dark">
+          <i class="fab fa-meetup fa-3x"></i>
+          <h5 class="pt-2">Meetup</h5>
+        </a>
+      </div>
+      <div class="col dfw-social-link">
+        <a href="https://github.com/smedfw/" target="_blank" class="text-dark">
+          <i class="fab fa-github fa-3x"></i>
+          <h5 class="pt-2">GitHub</h5>
+        </a>
+      </div>
+      <div class="col dfw-social-link">
+        <a href="https://www.facebook.com/smedfw/" target="_blank" class="text-dark">
+          <i class="fab fa-facebook fa-3x"></i>
+          <h5 class="pt-2">Facebook</h5>
+        </a>
+      </div>
+
+      <div class="w-100 d-none dfw-d-sm-block-down"></div>
+
+      <div class="col dfw-social-link">
+        <a href="https://www.twitter.com/smedfw/" target="_blank" class="text-dark">
+          <i class="fab fa-twitter-square fa-3x"></i>
+          <h5 class="pt-2">Twitter</h5>
+        </a>
+      </div>
+      <div class="col dfw-social-link">
+        <a href="https://www.linkedin.com/company/smedfw/" target="_blank" class="text-dark">
+          <i class="fab fa-linkedin fa-3x"></i>
+          <h5 class="pt-2">LinkedIn</h5>
+        </a>
+      </div>
+      <div class="col dfw-social-link">
+        <a href="mailto:hello@smedfw.com" class="text-dark">
+          <i class="fas fa-envelope fa-3x"></i>
+          <h5 class="pt-2">Email</h5>
+        </a>
+      </div>
+    </div>
+
+  </div> <!-- /.container -->
+
+  <footer class="container py-3">
+    <div class="row">
+      <div class="col-md-auto">
+        <p class="d-block mb-3 text-muted">© SME DFW Chapter 2018</p>
+      </div>
+      <div class="col-12 col-md dfw-footer-align--links">
+        <ul class="list-unstyled text-small">
+          <li>
+            <a href="http://www.sme.org/join/" target="_blank">
+              <strong>Join the SME</strong>
+            </a>
+          </li>
+          <li>
+            <a class="text-dark" href="mailto:hello@smedfw.com">Contact Us</a>
+          </li>
+          <li>
+            <a class="text-dark" href="https://github.com/smedfw/community-guidelines" target="_blank">Community Guidelines</a>
+          </li>
+          <li>
+            <a class="text-dark" href="https://github.com/smedfw/website/" target="_blank">Source code for this page</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </footer>
+
 </body>
 </html>
