feat: add outdated browser warning for IE11 and lower
Closes #8

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,16 @@
   <% } %>
 </head>
 <body>
+  <!--[if IE]>
+    <div class="container-fluid py-2 dfw-outdated-browser-banner">
+      <p class="my-0">This site works best when you are using a modern web browser. Please consider <a href="http://outdatedbrowser.com/" target="_blank">upgrading your browser</a> to improve your experience.</p>
+    </div>
+  <![endif]-->
+
+  <div class="container-fluid py-2 dfw-outdated-browser-banner" style="display: none">
+    <p class="my-0">This site works best when you are using a modern web browser. Please consider <a href="http://outdatedbrowser.com/" target="_blank">upgrading your browser</a> to improve your experience.</p>
+  </div>
+
   <div class="container">
 
     <section class="jumbotron p-3 p-md-5 text-white dfw-jumbotron-image">
